Mobile friendly first, up to 480px.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
 
     -->
 
-    <!----- Main background ----->
+    <!----- Main background (Full desktop 1200px+) ----->
     <div class="main-bg">
     </div>
 
     <div class="wrapper">
+
       <!----- Header ----->
+      <a href="" target="_blank">
+        <img src="./imgs/main-bg-480.jpg" alt="Sesame St. Main Image">
+      </a>
+
+      <!----- Header
       <div class="nav" style="width: 100%;">
         <div class="container">
 
@@ -65,24 +71,57 @@
 
         </div>
       </div>
+      ----->
+
       <!----- 1st Section ----->
       <div class="first-section" id="info">
-
         <div class="celebrate-image">
           <img src="./imgs/celebration.jpg" alt="Celebration Time!">
         </div>
-
+        <!--
         <div class="celebrate-text">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </div>
-
+        </div> -->
         <div class="celebrate-text-mobile">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </div>
-
       </div>
 
       <!----- 2nd Section ----->
+      <div class="second-section">
+        <div class="imgs">
+          <a href="">
+            <img src="./imgs/fivemsgs.jpg" alt="Five Messages">
+          </a>
+        </div>
+        <div class="imgs">
+          <a href="">
+            <img src="./imgs/real.jpg" alt="Real image">
+          </a>
+        </div>
+        <div class="imgs">
+          <a href="">
+            <img src="./imgs/heartfelt.jpg" alt="Heartfelt image">
+          </a>
+        </div>
+        <div class="imgs">
+          <a href="">
+            <img src="./imgs/simple.jpg" alt="Simple image">
+          </a>
+        </div>
+        <div class="imgs">
+          <a href="">
+            <img src="./imgs/funny.jpg" alt="Funny image">
+          </a>
+        </div>
+        <div class="imgs">
+          <a href="">
+            <img src="./imgs/furry.jpg" alt="Furry image">
+          </a>
+        </div>
+      </div>
+
+      <!----- 2nd Section
       <div class="second-section">
 
         <ul>
@@ -121,8 +160,59 @@
         </ul>
 
       </div>
+      ----->
 
       <!----- 3rd Section ----->
+      <div class="third-section">
+        <div class="third-section-title">
+          <img src="./imgs/section-three-title.png" alt="Sesame Street Collections">
+        </div>
+
+        <ul>
+          <li class="products">
+            <figure>
+              <a href="" target="_blank">
+                <img src="./imgs/product-480.jpg" alt="1st Product">
+              </a>
+              <div class="product-desc">
+                Demo
+              </div>
+            </figure>
+          </li>
+          <li class="products">
+            <figure>
+              <a href="" target="_blank">
+                <img src="./imgs/product-480.jpg" alt="2nd Product">
+              </a>
+              <div class="product-desc">
+                Demo
+              </div>
+            </figure>
+          </li>
+          <li class="products">
+            <figure>
+              <a href="" target="_blank">
+                <img src="./imgs/product-480.jpg" alt="3rd Product">
+              </a>
+              <div class="product-desc">
+                Demo
+              </div>
+            </figure>
+          </li>
+          <li class="products">
+            <figure>
+              <a href="" target="_blank">
+                <img src="./imgs/product-480.jpg" alt="4th Product">
+              </a>
+              <div class="product-desc">
+                Demo
+              </div>
+            </figure>
+          </li>
+        </ul>
+      </div>
+
+      <!----- 3rd Section
       <div class="third-section">
 
         <div class="third-section-title">
@@ -203,8 +293,15 @@
         </div>
 
       </div>
+      ----->
 
       <!----- 4th Section ----->
+      <div class="fourth-section">
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/watch?v=FvS3C7r6DjY?rel=0&controls=0&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+      <!----- 4th Section
       <div class="fourth-section">
 
         <div class="fourth-section-title">
@@ -217,8 +314,25 @@
         </div>
 
       </div>
+      ----->
 
       <!----- Logos ----->
+      <div class="logos">
+        <ul>
+          <li>
+            <img class="logo-imgs" src="./imgs/sally-beauty-logo.jpg" alt="Sally Beauty Logo">
+          </li>
+          <li>
+            <img class="logo-imgs" src="./imgs/ulta-logo.jpg" alt="Ulta Logo">
+          </li>
+          <li>
+            <img class="logo-imgs" src="./imgs/jcpenny-logo.jpg" alt="JC Penny Logo">
+          </li>
+        </ul>
+      </div>
+
+
+      <!----- Logos
       <div class="companies">
 
         <div class="companies-box">
@@ -228,8 +342,11 @@
         </div>
 
       </div>
+      ----->
 
-      <!----- Footer ----->
+    </div>
+
+      <!----- Footer
       <div class="footer">
 
         <div class="container">
@@ -269,7 +386,7 @@
         </div>
 
       </div>
-    </div>
+      ----->
 
   </body>
 </html>
