Changed products to png for easier bgcolor

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <figure>
               <a href="" target="_blank">
                 <div class="product-image">
-                  <img src="./imgs/product.jpg" alt="1st Product">
+                  <img src="./imgs/product.png" alt="1st Product">
                 </div>
               </a>
               <div class="product-desc">
@@ -148,7 +148,7 @@
             <figure>
               <a href="" target="_blank">
                 <div class="product-image">
-                  <img src="./imgs/product.jpg" alt="2nd Product">
+                  <img src="./imgs/product.png" alt="2nd Product">
                 </div>
               </a>
               <div class="product-desc">
@@ -160,7 +160,7 @@
             <figure>
               <a href="" target="_blank">
                 <div class="product-image">
-                  <img src="./imgs/product.jpg" alt="3rd Product">
+                  <img src="./imgs/product.png" alt="3rd Product">
                 </div>
               </a>
               <div class="product-desc">
@@ -172,7 +172,7 @@
             <figure>
               <a href="" target="_blank">
                 <div class="product-image">
-                  <img src="./imgs/product.jpg" alt="4th Product">
+                  <img src="./imgs/product.png" alt="4th Product">
                 </div>
               </a>
               <div class="product-desc">
@@ -251,7 +251,7 @@
           </div>
         </div>
       </div>
-      
+
     </div>
 
   </body>
